# antibody-shapers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data/: placeholder.txt
results/: placeholder.txt
scripts/: to_run.py
src/antibody_shapers/: __init__.py  gen_alg_basic.py  main_shaping_process.py  shaping_funcs.py  utils.py
src/antibody_shapers/binding/: calculate_binding.py  interaction_matrix.py  pose_matrix.py
src/antibody_shapers/data/: jpadded_matrix.npy
