[tool.poetry]
name = "antibody_shapers"
version = "0.1.0"
description = "Opponent shaping for antibody development"
authors = ["Seb Towers and Ola Kalisz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
jax = "^0.4.33"
chex = "^0.1.86"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
